replace mat with pdz scss

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -1,7 +1,7 @@
 $primary-color: var(--pdz-primary);
-$primary-hover-color: var(--mat-sys-secondary);
-$border-color: var(--mat-sys-outline-variant);
-$text-color: var(--mat-sys-on-surface);
+$primary-hover-color: var(--pdz-secondary);
+$border-color: var(--pdz-primary-border-variant);
+$text-color: var(--pdz-on-surface);
 $timestamp-color: var(--pdz-primary);
 $background-color: var(--pdz-surface);
 .message-list {
