--- a/src/app/league-zone/league-teams/league-teams.component.scss
+++ b/src/app/league-zone/league-teams/league-teams.component.scss
@@ -7,7 +7,7 @@
 }
 
 pdz-league-team-card {
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
   border-radius: 1rem;
   padding: 0.5rem;
 }
