--- a/src/app/league-zone/league/league.component.scss
+++ b/src/app/league-zone/league/league.component.scss
@@ -1,7 +1,7 @@
 .widget {
   display: flex;
   flex-direction: column;
-  box-shadow: var(--mat-sys-level2);
+  box-shadow: var(--pdz-level2);
   border-radius: 1rem;
   overflow: hidden;
   .widget-title {
