--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -28,9 +28,9 @@
     font-size: 1.5rem;
     line-height: 2rem;
     text-align: center;
-    border-bottom: 2px solid var(--mat-sys-outline);
+    border-bottom: 2px solid var(--pdz-primary-border);
     font-family: var(--pdz-font-fancy);
-    color: var(--mat-sys-on-surface);
+    color: var(--pdz-on-surface);
     margin: 0 0.5rem;
     flex-shrink: 0;
   }
