--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -1,7 +1,7 @@
 .setting-title {
   font-family: var(--pdz-font-fancy);
   font-size: 1.75em;
-  color: var(--mat-sys-on-surface);
+  color: var(--pdz-on-surface);
 }
 .setting-container {
   padding: 1rem;
