--- a/src/app/planner/planner.component.scss
+++ b/src/app/planner/planner.component.scss
@@ -73,8 +73,8 @@
 }
 
 .tab {
-  background-color: var(--mat-sys-surface-variant);
-  color: var(--mat-sys-on-surface-variant);
+  background-color: var(--pdz-surface-variant);
+  color: var(--pdz-on-surface-variant);
   border-radius: 0.5rem 0.5rem 0 0;
   padding: 6px;
   cursor: pointer;
