--- a/src/app/util/tooltip/tooltip.component.scss
+++ b/src/app/util/tooltip/tooltip.component.scss
@@ -6,7 +6,7 @@
 .tooltip {
   position: fixed;
   background: var(--pdz-surface);
-  color: var(--mat-sys-on-surface);
+  color: var(--pdz-on-surface);
   padding: 8px;
   border-radius: 8px;
   font-size: 14px;
