--- a/src/app/debug/themes/debug-themes.component.scss
+++ b/src/app/debug/themes/debug-themes.component.scss
@@ -46,7 +46,7 @@
 
   .card {
     background-color: var(--pdz-surface);
-    border: 1px solid var(--pdz-outline);
+    border: 1px solid var(--pdz-primary-border);
     border-radius: 8px;
     margin: 1rem 0;
     padding: 1.5rem;
