--- a/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
+++ b/src/app/drafts/matchup-overview/matchup/speedchart/speedtier/speedtier.component.scss
@@ -10,7 +10,7 @@
   .speed-label {
     line-height: 2rem;
     font-weight: 700;
-    color: var(--mat-sys-secondary);
+    color: var(--pdz-secondary);
   }
   .modifier-container {
     display: flex;
@@ -25,8 +25,8 @@
       padding: 0 0.25rem;
       font-weight: 700;
       font-size: 0.7em;
-      border: 1px solid var(--mat-sys-secondary);
-      color: var(--mat-sys-secondary);
+      border: 1px solid var(--pdz-secondary);
+      color: var(--pdz-secondary);
       border-radius: 1rem;
       user-select: none;
     }
