--- a/src/app/league-zone/league-landing/landing.component.scss
+++ b/src/app/league-zone/league-landing/landing.component.scss
@@ -4,8 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: var(--mat-sys-primary-container);
-  color: var(--mat-sys-on-primary-container);
+  background-color: var(--pdz-primary-container);
+  color: var(--pdz-on-primary-container);
   padding: 0.25rem;
   font-size: x-large;
   width: 12rem;
