--- a/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
+++ b/src/app/league-zone/league-tier-list/league-tier-list-form/league-tier-list-form.component.scss
@@ -11,7 +11,7 @@
   top: 0px;
   z-index: 2000;
   border-width: 0px 0px 2px 0px;
-  border-color: var(--mat-sys-outline);
+  border-color: var(--pdz-primary-border);
 }
 
 .tier-entry {
@@ -21,7 +21,7 @@
   flex-grow: 1;
   padding: 0.25rem;
   border-width: 0px 0px 1px 0px;
-  border-color: var(--mat-sys-outline-variant);
+  border-color: var(--pdz-primary-border-variant);
   font-size: 0.875rem;
   line-height: 1.25rem;
   column-gap: 0.25rem;
@@ -42,7 +42,7 @@
   }
 
   &.selected {
-    background-color: var(--mat-sys-secondary-container);
+    background-color: var(--pdz-secondary-container);
   }
 
   &.dragStarted {
@@ -53,14 +53,14 @@
 .restricted-icon {
   right: 0px;
   bottom: 0px;
-  color: var(--mat-sys-error);
+  color: var(--pdz-error);
   transform: scale(0.75);
   position: absolute;
 }
 
 .tier-main {
   border-width: 2px;
-  border-color: var(--mat-sys-outline);
+  border-color: var(--pdz-primary-border);
   max-width: 100%;
   flex-grow: 1;
   display: flex;
@@ -74,7 +74,7 @@
     width: fit-content;
     overflow-y: auto;
     flex-direction: column;
-    box-shadow: var(--mat-sys-level3);
+    box-shadow: var(--pdz-level3);
 
     .header-label {
       text-align: center;
@@ -129,7 +129,7 @@
     .tier-group {
       &:not(:first-child) {
         border-width: 0px 0px 0px 3px;
-        border-color: var(--mat-sys-outline);
+        border-color: var(--pdz-primary-border);
       }
       display: flex;
       flex-direction: column;
@@ -143,7 +143,7 @@
           width: fit-content;
           &:not(:first-child) {
             border-width: 0px 0px 0px 2px;
-            border-color: var(--mat-sys-outline);
+            border-color: var(--pdz-primary-border);
           }
         }
       }
@@ -182,7 +182,7 @@
 }
 
 .cdk-drop-list-dragging {
-  background-color: var(--mat-sys-outline-variant);
+  background-color: var(--pdz-primary-border-variant);
 }
 
 .drag-placeholder {
@@ -205,7 +205,7 @@
   height: 100%;
 
   width: 2rem;
-  border-left: 2px solid var(--mat-sys-outline);
+  border-left: 2px solid var(--pdz-primary-border);
   .add-icon {
     top: 0px;
     position: sticky;
@@ -221,7 +221,7 @@
   text-align: center;
   flex-shrink: 0;
   width: 4rem;
-  border-left: 2px solid var(--mat-sys-outline);
+  border-left: 2px solid var(--pdz-primary-border);
   .add-icon {
     top: 0px;
     position: sticky;
@@ -240,11 +240,11 @@
   padding: 0.125rem;
   mat-icon {
     font-size: 1.2em;
-    color: var(--mat-sys-secondary);
+    color: var(--pdz-secondary);
     height: fit-content;
     width: fit-content;
   }
   &:hover {
-    background-color: var(--mat-sys-primary-container);
+    background-color: var(--pdz-primary-container);
   }
 }
