--- a/src/app/league-zone/league/file-upload-preview/file-upload-preview.component.scss
+++ b/src/app/league-zone/league/file-upload-preview/file-upload-preview.component.scss
@@ -11,7 +11,7 @@
   max-height: 300px; // Limit preview height
   margin-bottom: 1rem;
   border-radius: 100rem;
-  border: 4px solid var(--mat-sys-outline);
+  border: 4px solid var(--pdz-primary-border);
   overflow: hidden; // Contain the image/icon
   padding: 10px;
 }
