--- a/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
+++ b/src/app/tools/quick-draft/quick-draft-picks/quick-draft-picks.component.scss
@@ -121,7 +121,7 @@
     text-align: center;
     font-size: 1.2em;
     font-family: var(--pdz-font-fancy);
-    border-bottom: 2px solid var(--mat-sys-outline);
+    border-bottom: 2px solid var(--pdz-primary-border);
   }
 }
 
