--- a/src/app/util/matchup/summary-core/summary-core.component.scss
+++ b/src/app/util/matchup/summary-core/summary-core.component.scss
@@ -20,7 +20,7 @@ td {
 }
 
 .slider-cell {
-  border: 1.5px solid var(--mat-sys-outline);
+  border: 1.5px solid var(--pdz-primary-border);
   .slider-container {
     display: flex;
     flex-direction: column;
@@ -57,7 +57,7 @@ td {
 }
 
 th.cdk-header-cell {
-  border-bottom: 2px solid var(--mat-sys-outline);
+  border-bottom: 2px solid var(--pdz-primary-border);
 }
 
 table {
